Fix/directors grid layout (#71)
* Implemented 4 directors per row design

* Removed border and moved technical up

* Updated tablet to 3 directors per row

* Fixed line in cloud background

* fixed horizontal margins for directors section

* Updated directors section so that the titles of directors don't get cut off

* Update OurTeam.module.scss

---------

--- a/app/(pages)/about-us/_components/OurTeam/OurTeam.module.scss
+++ b/app/(pages)/about-us/_components/OurTeam/OurTeam.module.scss
@@ -13,7 +13,7 @@
         width: 100%;
         height: 100%;
         // max-width: 1440px;
-        padding: 0% 13%;
+        padding: 0% 13% 5%;
     
         // border: 1px solid black;
 
@@ -130,7 +130,7 @@
             width: 100%;
             height: 100%;
             // max-width: 1440px;
-            padding: 0% 13%;
+            padding: 0% 13% 5%;
     
             &_title{
                 display: flex;
@@ -247,7 +247,7 @@
             width: 100%;
             height: 100%;
             // max-width: 1440px;
-            padding: 0% 13%;
+            padding: 0% 13% 5%;
         
             // border: 1px solid black;
     
